--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
   <title>MCCs PayU</title>
   <style>
     body {
-      font-family: 'Inter', Arial, sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fafafa;
     }
     header {
       background: #5600EF;
       color: white;
       text-align: center;
       padding: 20px;
-      font-size: 1.6em;
-      font-weight: 700;
+      font-size: 1.4em;
+      font-weight: bold;
     }
     .container {
       max-width: 900px;
       margin: 20px auto;
       background: white;
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     .search-lang-row {
       display: flex;
@@ -32,29 +31,25 @@
       margin-bottom: 20px;
     }
     #mccInput, #langSelect, #exportBtn {
-      font-family: 'Inter', Arial, sans-serif;
       font-size: 1em;
       padding: 8px 14px;
       border-radius: 6px;
-      border: 1.5px solid #ccc;
-      outline: none;
-      transition: border 0.2s, box-shadow 0.2s;
+      border: 1px solid #ccc;
     }
     #mccInput:focus {
       border: 2px solid #5600EF;
-      box-shadow: 0 2px 8px rgba(86,0,239,0.13);
+      outline: none;
     }
     #langSelect {
       cursor: pointer;
-      border: 1.5px solid #5600EF;
-      font-weight: 600;
-      background: #fff;
+      border: 1px solid #5600EF;
+      font-weight: bold;
     }
     #exportBtn {
       border: 1.5px solid #5600EF;
       background: #fff;
       color: #5600EF;
-      font-weight: 600;
+      font-weight: bold;
       cursor: pointer;
     }
     #exportBtn:hover {
@@ -74,7 +69,7 @@
     }
     th {
       background: #f0f0f5;
-      font-weight: 600;
+      font-weight: bold;
     }
     tr:hover {
       background: #faf6ff;
