--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MCC PayU</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', Arial, sans-serif;
@@ -36,6 +37,7 @@
       border: 1.5px solid #ccc;
       flex: 1;
     }
+    /* Botón exportar con tu mismo estilo visual */
     .search-lang-row button {
       font-family: 'Inter', Arial, sans-serif;
       font-size: 1em;
@@ -90,6 +92,7 @@
         <option value="es">ES</option>
         <option value="en">EN</option>
       </select>
+      <!-- Nuevo botón exportar -->
       <button id="exportBtn" onclick="exportarMCC()">📥 Exportar</button>
     </div>
     <div class="results" id="results"></div>
@@ -103,7 +106,7 @@
 
     async function cargarDatos() {
       try {
-        const response = await fetch("mcc.json"); // tu archivo MCC
+        const response = await fetch("mcc.json");
         datos = await response.json();
         datosCargados = true;
         document.getElementById("mccInput").disabled = false;
